--- a/main-service/package.json
+++ b/main-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/main-service",
   "scripts": {
-    "start": "NODE_PATH=${PWD}/.. node --expose-gc lib/main-service",
+    "start": "node --expose-gc lib/main-service",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Muhammad Yousaf Hanif",
