--- a/main-service/package.json
+++ b/main-service/package.json
@@ -8,5 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Muhammad Yousaf Hanif",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "querystring": "^0.2.0",
+    "url": "^0.11.0",
+    "util": "^0.12.3"
+  }
 }
